fix:#8 userId에 관련된 로직만 수정 및 ai관련 로직 다 제거