@@ -1,16 +1,22 @@
 package com.couponmoa.backend.couponmoacoupon.domain.coupon.service.v2;
 
+import com.couponmoa.backend.couponmoacoupon.domain.coupon.dto.request.CouponDto;
+import com.couponmoa.backend.couponmoacoupon.domain.coupon.dto.request.RecommendRequest;
 import com.couponmoa.backend.couponmoacoupon.domain.coupon.entity.Search;
-import com.couponmoa.backend.couponmoacoupon.domain.coupon.entity.SearchHistory;
-import com.couponmoa.backend.couponmoacoupon.domain.coupon.repository.SearchHistoryRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -21,45 +27,61 @@ import java.util.stream.Collectors;
 public class CouponRecommendationService {
 
     private final CouponElasticsearchService couponElasticsearchService;
-    private final SearchHistoryRepository searchHistoryRepository;
-    private final ChatClient chatClient;
-    private final ObjectMapper objectMapper;
+    private final RestTemplate restTemplate;
 
-    public List<Search> getAIRecommendations(Long userId) throws IOException {
-        List<String> userKeywords = searchHistoryRepository.findByUserId(userId.toString()).stream()
-                .map(SearchHistory::getKeyword)
-                .distinct()
-                .limit(5)
-                .collect(Collectors.toList());
+    @Value("${ai.service.url}")
+    private String aiServiceUrl;
 
-        List<String> keywords = userKeywords.isEmpty() ?
-                couponElasticsearchService.getPopularKeywords(5) : userKeywords;
+    private static final String ENDPOINT = "/api/v1/coupon/recommend-ai";
 
-        List<Search> allCoupons = couponElasticsearchService.getAllCoupons();
+    public List<Search> getAIRecommendations(String userId) {
+        try {
+            List<Search> allCoupons = couponElasticsearchService.getAllCoupons();
 
-        String prompt = "Based on user keywords " + keywords + ", recommend up to 5 coupon IDs from:\n" +
-                allCoupons.stream()
-                        .map(c -> String.format("ID: %d, Name: %s, Description: %s",
-                                c.getCouponId(), c.getName(), c.getDescription()))
-                        .reduce("", (a, b) -> a + b + "\n") +
-                "Return JSON with 'recommended_coupon_ids' key containing up to 5 IDs.";
+            RecommendRequest requestDto = buildRecommendRequest(userId, allCoupons);
 
-        String response = chatClient.prompt().user(prompt).call().content();
-        List<Long> recommendedIds = extractRecommendedIds(response);
+            HttpHeaders headers = new HttpHeaders();
+            headers.setContentType(MediaType.APPLICATION_JSON);
+            HttpEntity<RecommendRequest> entity = new HttpEntity<>(requestDto, headers);
 
-        return allCoupons.stream()
-                .filter(c -> recommendedIds.contains(c.getCouponId()))
-                .toList();
+            ResponseEntity<Map> response = restTemplate.postForEntity(aiServiceUrl + ENDPOINT, entity, Map.class);
+
+            if (response.getStatusCode().is2xxSuccessful()) {
+                Map<String, Object> body = response.getBody();
+                if (body != null && body.get("recommended_coupon_ids") instanceof List<?>) {
+                    List<Long> recommendedIds = ((List<?>) body.get("recommended_coupon_ids")).stream()
+                            .map(id -> Long.valueOf(id.toString()))
+                            .collect(Collectors.toList());
+
+                    return allCoupons.stream()
+                            .filter(c -> recommendedIds.contains(c.getCouponId()))
+                            .toList();
+                }
+            }
+        } catch (Exception e) {
+            log.error("AI 추천 요청 실패", e);
+        }
+
+        return Collections.emptyList();
     }
 
-    private List<Long> extractRecommendedIds(String response) {
+    private RecommendRequest buildRecommendRequest(String userId, List<Search> allCoupons) {
         try {
-            Map<String, List<Long>> parsed = objectMapper.readValue(response, Map.class);
-            List<Long> recommendedIds = parsed.get("recommended_coupon_ids");
-            return recommendedIds != null ? recommendedIds : Collections.emptyList();
+            List<String> keywords = couponElasticsearchService.getPopularKeywords(5);
+
+            List<CouponDto> coupons = allCoupons.stream()
+                    .map(c -> new CouponDto(
+                            c.getCouponId(),
+                            c.getName(),
+                            c.getDescription()
+                    ))
+                    .toList();
+
+            return new RecommendRequest(keywords, coupons);
         } catch (Exception e) {
-            log.error("Failed to parse Gemini response", e);
-            return Collections.emptyList();
+            log.error("AI 추천 데이터 생성 실패", e);
+            return new RecommendRequest(Collections.emptyList(), Collections.emptyList());
         }
     }
 }
+
